Bug 163265 - Cannot login to remote cvs pserver
Summary: Cannot login to remote cvs pserver
Status: RESOLVED FIXED
Alias: None
Product: cervisia
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Andre Woebbeking
URL:
Keywords:
: 162292 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-06-05 13:27 UTC by Davide Ferrari
Modified: 2008-08-15 14:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Davide Ferrari 2008-06-05 13:27:09 UTC
Version:            (using Devel)
Installed from:    Compiled sources

I add a a repository in the "Repository -> Repositories" dialog with a classic syntax like

:pserver:user@cvs.domain.com/path/to/cvsroot

and then when I try to login with the "login" button, I get a simple "Login failed" and the detail button provides no details at all.
If, from a console, I issue a

cvs -d :pserver:user@cvs.domain.com/path/to/cvsroot
password: ****

then cervisia recognize the login correctly and I do a checkout and everything.
Comment 1 Andre Woebbeking 2008-06-11 20:13:17 UTC
SVN commit 819671 by woebbe:

BUG: 163265

Fixed login to remote cvs pserver.

Reasons:
- KDE4 porting errors
- 2 kdelibs errors (I fixed one, the other will hopefully committed soon)
- behaviour change of Qt4 (see QApplication::setQuitOnLastWindowClosed)

 M  +5 -0      ChangeLog  
 M  +4 -1      cvsservice/main.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=819671
Comment 2 Andre Woebbeking 2008-06-12 23:06:48 UTC
OK, kdelibs is fixed with revision 819778.

If you update kdelibs and kdesdk login works.
Comment 3 Davide Ferrari 2008-06-13 10:25:54 UTC
Thanks for the quick fix! :)
Comment 4 Andre Woebbeking 2008-08-15 14:16:34 UTC
*** Bug 162292 has been marked as a duplicate of this bug. ***