BUG: 163265

Fixed login to remote cvs pserver.

Reasons:
- KDE4 porting errors
- 2 kdelibs errors (I fixed one, the other will hopefully committed soon)
- behaviour change of Qt4 (see QApplication::setQuitOnLastWindowClosed)

svn path=/trunk/KDE/kdesdk/cervisia/; revision=819671